--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <link rel="stylesheet" href="/css/my_styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
@@ -12,6 +13,18 @@
   </head>
 
   <body>
+    <nav>
+      <a href="/">Delivery Tracker</a>
+        <% if current_user != nil %>
+          <a href="/users/sign_out">Sign Out</a>
+          <a href="/users/edit">Edit Profile</a>
+        <% else %>
+          <a href="/users/sign_up">Sign Up</a>
+          <a href="/users/sign_in">Sign In</a>
+        <% end %>
+    </nav>
+    <hr>
+
      <% if notice.present? %>
       <div style="color: green">
         <%= notice %>
